# baldimore

./: Cargo.toml
src/: animation.rs  collision.rs  game.rs  graphics.rs  input.rs  lib.rs  math.rs  platform.rs  rectangle.rs  sound.rs  window.rs
src/graphics/: colour.rs  draw.rs  render.rs  spritebatch.rs  texture.rs
src/input/: gamepad.rs  keyboard.rs  mouse.rs
src/platform/: circle.wgsl  glyth.wgsl  graphics_device.rs  graphics_interface.rs  rectangle.wgsl  shader.wgsl  sprite.wgsl  system_sdl.rs  texture.rs
src/shapes/: circle.rs  rectangle.rs
