[package]
name = "baldimore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
pollster = "0.2"
cgmath = "0.18.0"
[dependencies.sdl2]
features = ["bundled", "raw-window-handle"]
version = "0.35.2"