[package]
name = "baldimore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
pollster = "0.2"
cgmath = "0.18.0"
spin_sleep = "1.1.1"
bytemuck = { version = "1.9.1", features = [ "derive" ] }
[dependencies.sdl2]
features = ["raw-window-handle"]
version = "0.35.2"
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]