[package]
name = "baldimore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
kira = "0.6.0"
wgpu = "0.13.0"
pollster = "0.2"
cgmath = "0.18.0"
bytemuck = { version = "1.9.1", features = [ "derive" ] }
[dependencies.sdl2]
features = ["raw-window-handle"]
version = "0.35.2"
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]